# corewar_ik

./: ._corewar  .gitignore  CMakeLists.txt  Makefile  author  op.c  op.h
asm/: Makefile  asm  asm.h  big_bot.cor  big_bot.s  check_data.c  check_instructions.c  clean_data.c  error_management.c  ik_1.c  ik_2.c  ik_init_struct.c  ik_print_memory.c  ik_write_comand.c  ik_write_mark.c  init_data.c  main.c  main.c~  myfile  pars_check_data.c  pars_check_instructions.c  pars_init_data.c  pars_lines.c  pars_read_file.c  pars_separate_lines.c  parse_lines.c  read_file.c  read_file.c~  sam_2.0.s  separate_lines.c  write_base_fun.c  write_code.c  write_code_comand.c
asm/src/: asm.h  clean_data.c  error_management.c  main.c  op.h  pars_check_data.c  pars_init_data.c  pars_read_file.c  write_code_mark.c  write_init_mark.c
corewar/: ._asm  ._champs  ._corewar
corewar-championship/: .delete_me.swp  .test.s.swp  cmp  debug  delete_me  test.cor  test.s  test1.c  test1.cor  test1.s
corewar-championship/players/: test.cor  test.s  test1.cor  test1.s  test3.cor  test3.s  toto.cor
corewar/champs/: ._42.cor  ._42.s  ._Backward.s  ._Car.s  ._Death.s  ._Gagnant.s  ._Octobre_Rouge_V4.2.s  ._Survivor.s  ._Torpille.s  ._barriere.s  ._championships  ._ex.s  ._examples  ._jumper.s  ._lde.s  ._leeloo.s  ._mat.s  ._maxidef.s  ._mortel.s  ._new.s  ._sebc.s  ._slider2.s  ._tdc2.s  ._tdc3.s  ._tdc4.s  ._toto.s  ex.cor
corewar/champs/championships/: ._2014
corewar/champs/championships/2014/: ._bguy  ._bjacob  ._brandazz  ._cdivry  ._clafleur  ._dcohen  ._ekocevar  ._esusseli  ._evlasova  ._fcorre  ._gbir  ._gjestin  ._gleger  ._gmange  ._gpetrov  ._gudepard  ._hmichals  ._hmoutaou  ._kelickel  ._kmonrose  ._ldesgoui  ._lseguin  ._lsirigna  ._mbacoux  ._mconraux  ._rabid-on  ._results.txt  ._rmasse  ._sbuono  ._srabah-m  ._tdemay  ._vrey  ._ybouvet
corewar/champs/championships/2014/bguy/: ._sam_2.0.s
corewar/champs/championships/2014/bjacob/: ._doge.s
corewar/champs/championships/2014/brandazz/: ._Rainbow_dash.s
corewar/champs/championships/2014/cdivry/: ._youforkmytralala.s
corewar/champs/championships/2014/clafleur/: ._big_feet.s
corewar/champs/championships/2014/dcohen/: ._loose.s
corewar/champs/championships/2014/ekocevar/: ._mandragore.s
corewar/champs/championships/2014/esusseli/: ._gedeon.s
corewar/champs/championships/2014/evlasova/: ._terminator.s
corewar/champs/championships/2014/fcorre/: ._ultimate-surrender.s
corewar/champs/championships/2014/gbir/: .__.s
corewar/champs/championships/2014/gjestin/: ._salamahenagalabadoun.s
corewar/champs/championships/2014/gleger/: ._Machine-gun.s
corewar/champs/championships/2014/gmange/: ._corelol.s
corewar/champs/championships/2014/gpetrov/: ._MarineKing.s
corewar/champs/championships/2014/gudepard/: ._Kappa.s
corewar/champs/championships/2014/hmichals/: ._Wall.s
corewar/champs/championships/2014/hmoutaou/: ._Misaka_Mikoto.s
corewar/champs/championships/2014/kelickel/: ._Varimathras.s
corewar/champs/championships/2014/kmonrose/: ._justin_bee.s
corewar/champs/championships/2014/ldesgoui/: .__honeybadger.s
corewar/champs/championships/2014/lseguin/: ._skynet.s
corewar/champs/championships/2014/lsirigna/: ._live.s
corewar/champs/championships/2014/mbacoux/: ._meowluigi.s
corewar/champs/championships/2014/mconraux/: ._dubo.s
corewar/champs/championships/2014/rabid-on/: ._jinx.s
corewar/champs/championships/2014/rmasse/: ._THUNDER.s
corewar/champs/championships/2014/sbuono/: ._Asombra.s
corewar/champs/championships/2014/srabah-m/: ._littlepuppy.s
corewar/champs/championships/2014/tdemay/: ._champ.s
corewar/champs/championships/2014/vrey/: ._darksasuke.s
corewar/champs/championships/2014/ybouvet/: ._casimir.s
corewar/champs/examples/: ._bee_gees.s  ._bigzork.s  ._fluttershy.s  ._helltrain.s  ._turtle.s  ._zork.s
corewar/players/: toto.cor  toto.s
corewar_example/champs/championships/2014/hmoutaou/: Misaka_Mikoto.cor
libftprintf/: Makefile  converter_base.c  final_write.c  ft_printf.c  ft_printf.h  get_next_line.c  get_next_line.h  initialize_flags.c  type_char.c  type_dec.c  type_float.c  type_hex.c  type_oct.c  type_str.c
libftprintf/libft/: ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sort_tab.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  (+24 more)
players/: ex.s  test.cor  test.s  toto.s
virtual_machine/: 00_helpfun_0.c  00_helpfun_1.c  00_live.c  01_ld.c  02_st.c  03_add.c  04_sub.c  05_and.c  06_or.c  07_xor.c  08_zjmp.c  09_ldi.c  10_sti.c  11_fork.c  12_lld.c  13_lldi.c  14_lfork.c  15_aff.c  Makefile  a.out  allocation_memory.c  base_function.c  checking_instructions.c  comp.sh  corevar  corewar  d_test.cor  d_test.s  exec_pc_0.c  exec_pc_1.c  f00_live.c  f03_add.c  f04_sub.c  f05_and.c  f10_sti.c  f13_lldi.c  f14_lfork.c  free_memory.c  ft_error.c  ft_move_players_by_n.c  (+57 more)
virtual_machine/players/: test.cor  test.s  test1.cor  test1.s  test2.cor  test2.s  test3.cor  test3.s
virtual_machine/source/: bot.s
virtual_machine/src/: exec_pc_0.c  exec_pc_1.c  f00_helpfun_0.c  f00_helpfun_1.c  f00_live.c  f01_ld.c  f02_st.c  f06_or.c  f07_xor.c  f08_zjmp.c  f09_ldi.c  f11_fork.c  f12_lld.c  f15_aff.c  main.c  pars_parsing_file.c  visual_0.c  visual_3_dump.c  vm.h  wav_audio.c
